# Symphonia

symphonia/: Cargo.toml
symphonia-format-aiff/: Cargo.toml
symphonia-format-aiff/src/: chunks.rs  ids.rs  lib.rs  util.rs
symphonia/src/: lib.rs
