[package]
name = "symphonia-format-aiff"
version = "0.0.0"
description = "Pure Rust AIFF demuxer (a part of project Symphonia)."
homepage = "https://github.com/fibremint/Symphonia"
repository = "https://github.com/fibremint/Symphonia"
authors = ["Dave Kim <fibremint@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "media", "demuxer", "aiff"]
edition = "2018"
rust-version = "1.53"

[dependencies]
log = "0.4"
symphonia-core = { version = "0.5", path = "../symphonia-core" }
symphonia-metadata = { version = "0.5", path = "../symphonia-metadata" }